<resources>
    <string name="app_name">StuTrade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">"Username: "</string>
    <string name="enter_username">Enter Username</string>
    <string name="email_id">"Email Id: "</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="bio">"Bio: "</string>
    <string name="enter_bio">Enter Bio</string>
    <string name="location">"Location: "</string>
    <string name="enter_location">Enter Location</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="chat">Chat</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="select_user">Select User</string>
    <string name="sort_by">Sort By</string>
    <string name="all_items">All Items</string>
    <string name="logo">Logo</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
</resources>