<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/stutrade_round"
            app:layout_constraintBottom_toTopOf="@+id/username_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/enter_email"
            android:textColor="#012169"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_password"
            android:textColor="#012169"
            android:textColorHint="#808080"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>