<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        tools:context=".ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            tools:context=".ProfileFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Profile Photo -->
                <ImageView
                    android:id="@+id/iv_profile_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_profile" />

                <ImageView
                    android:id="@+id/iv_camera_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_camera"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_delete_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginStart="-32dp"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="168dp"
                android:text="@string/username"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_username"/>

            <!-- User Name (TextView) -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text=""
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/username"
                app:layout_constraintBottom_toTopOf="@id/email" />

            <!-- User Name (EditText in edit mode, initially hidden) -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:inputType="text"
                android:text=""
                android:hint="@string/enter_username"
                android:textSize="16sp"
                android:visibility="gone"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/username"
                app:layout_constraintBottom_toTopOf="@id/email" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email_id"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/username"
                app:layout_constraintEnd_toStartOf="@id/tv_email"/>

            <!-- Email Id (TextView) -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text=""
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/username"
                app:layout_constraintStart_toEndOf="@id/email"
                app:layout_constraintBottom_toTopOf="@id/bio"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bio"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintEnd_toStartOf="@id/tv_bio"/>

            <!-- Bio (TextView) -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_bio"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:text=""
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toEndOf="@id/bio"
                app:layout_constraintBottom_toTopOf="@id/location" />

            <!-- Bio (EditText in edit mode, initially hidden) -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bio"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:inputType="textMultiLine"
                android:text=""
                android:hint="@string/enter_bio"
                android:textSize="16sp"
                android:visibility="gone"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toEndOf="@id/bio"
                app:layout_constraintBottom_toTopOf="@id/location" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/location"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_bio"
                app:layout_constraintEnd_toStartOf="@id/tv_location"/>

            <!-- Location (TextView) -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_bio"
                app:layout_constraintStart_toEndOf="@id/location" />

            <!-- Location (EditText in edit mode, initially hidden) -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="text"
                android:text=""
                android:hint="@string/enter_location"
                android:textSize="16sp"
                android:visibility="gone"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_bio"
                app:layout_constraintStart_toEndOf="@id/location" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="University: "
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/location"
                app:layout_constraintEnd_toStartOf="@id/tv_university"/>

            <!-- Location (TextView) -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_university"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text=""
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/location"
                app:layout_constraintStart_toEndOf="@id/university" />

            <!-- Location (EditText in edit mode, initially hidden) -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_university"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:text=""
                android:hint="Enter University"
                android:textSize="16sp"
                android:visibility="gone"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/location"
                app:layout_constraintStart_toEndOf="@id/university" />

            <LinearLayout
                android:id="@+id/edit_buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/university">

            <!-- Edit Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/edit" />

            <!-- Logout Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/logout"/>
            </LinearLayout>


            <!-- Save and Cancel Buttons -->
            <LinearLayout
                android:id="@+id/save_buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_university">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:visibility="gone" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</ScrollView>